[package]
name = "rtop_plugin_docker"
version = "0.1.1"
authors = ["Asthowen<contact@asthowen.fr>"]
edition = "2021"
description = "A simple plugin for Rtop to manage Docker containers."
repository = "https://github.com/Asthowen/RtopPluginDocker"
readme = "README.md"
license = "MPL-2.0"

[profile.release]
opt-level = 3
strip = true
lto = true

[lib]
name = "rtop_plugin_docker"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.26.0", features = ["rt"] }
futures-util = "0.3.26"
rtop_dev = "1.1.0"
bollard = "0.14.0"